--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -1,4 +1,4 @@
-name: docusaurus deployment
+name: Deploy to GitHub Pages
 
 on:
   push:
@@ -11,14 +11,17 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 16.14.x
+          node-version: 14.x
           cache: npm
+      - uses: actions/download-artifact@v2
+        with:
+          name: health-files
+          path: docs/developer
       - run: |
           npm ci
           npm run build
-
       - uses: peaceiris/actions-gh-pages@v3
-      - with:
+        with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
           user_name: github-actions[bot]
