--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -2,7 +2,7 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches: ["master"]
+   branches: [master]
 
 jobs:
   deploy:
@@ -11,15 +11,15 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
-          node-version: 16.14.x
-          cache: npm
+         node-version: 16.x
+          cache: yarn
       - run: |
-          npm ci
-          npm run build
-
+          yarn
+          yarn build
       - uses: peaceiris/actions-gh-pages@v3
-      - with:
+        with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           publish_dir: ./build
-          user_name: github-actions[bot]
-          user_email: 41898282+github-actions[bot]@users.noreply.github.com
+          user_name: Abhijith Ganesh
+          user_email: 67182544+AbhijithGanesh@users.noreply.github.com
+
